--- a/buildspec_build.yml
+++ b/buildspec_build.yml
@@ -20,6 +20,7 @@ phases:
       - make all
       - echo "Running Terraform validation..."
       - cd terraform
+      - terraform fmt -recursive
       - terraform fmt -check
       - terraform validate
       - cd ..
