buildspec_build file change. terraform init

--- a/buildspec_build.yml
+++ b/buildspec_build.yml
@@ -10,8 +10,8 @@ phases:
       - pip install -r lambdas/requirements.txt
       - pip install pytest
       - echo "Installing Terraform..."
-      - wget https://releases.hashicorp.com/terraform/1.9.8/terraform_1.9.8_linux_amd64.zip
-      - unzip terraform_1.9.8_linux_amd64.zip -d /usr/local/bin/
+      - wget https://releases.hashicorp.com/terraform/1.13.2/terraform_1.13.2_linux_amd64.zip
+      - unzip terraform_1.13.2_linux_amd64.zip -d /usr/local/bin/
       - terraform -version
 
   build:
@@ -20,6 +20,7 @@ phases:
       - make all
       - echo "Running Terraform validation..."
       - cd terraform
+      - terraform init -input=false
       - terraform fmt -recursive
       - terraform fmt -check
       - terraform validate
