--- a/buildspec_build.yml
+++ b/buildspec_build.yml
@@ -26,7 +26,7 @@ phases:
       - terraform validate
       - cd ..
       - echo "Running Python tests..."
-      - pytest tests/ -v
+      - pytest test/ -v
 
 artifacts:
   files:
