--- a/.github/workflows/gitback-sync.yml
+++ b/.github/workflows/gitback-sync.yml
@@ -46,9 +46,8 @@ jobs:
       # Step 5: Create PR using GitHub CLI
       - name: Create PR to dev
         env:
-          GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
+          GH_TOKEN: ${{ secrets.PAT_TOKEN }}
         run: |
-          gh auth login --with-token <<< "${GITHUB_TOKEN}"
           # Check if PR already exists
           PR_EXISTS=$(gh pr list --base dev --head uat-sync --json number --jq '.[].number')
           if [ -z "$PR_EXISTS" ]; then
@@ -56,3 +55,4 @@ jobs:
           else
             echo "PR already exists: #$PR_EXISTS"
           fi
+
