--- a/buildspec_build.yml
+++ b/buildspec_build.yml
@@ -6,8 +6,8 @@ phases:
       python: 3.10
     commands:
       - echo "Installing dependencies..."
-      - yum install -y make zip unzip wget || apt-get update && apt-get install -y make zip unzip wget || true
-      - pip install -r lambdas/requirements.txt
+      - apt-get install -y unzip zip wget || true
+      - python3 -m pip install --upgrade pip
       - pip install pytest
       - echo "Installing Terraform..."
       - wget https://releases.hashicorp.com/terraform/1.13.2/terraform_1.13.2_linux_amd64.zip
@@ -16,13 +16,13 @@ phases:
 
   build:
     commands:
-      - echo "Packaging Lambda functions..."
-      - make all
-      - echo "Running Terraform validation..."
+      - echo "Preparing Lambda layer..."
+      - mkdir -p lambdas/layer/python
+      - pip install -r lambdas/requirements.txt -t lambdas/layer/python
+      - echo "Validating Terraform..."
       - cd terraform
       - terraform init -input=false
       - terraform fmt -recursive
-      - terraform fmt -check
       - terraform validate
       - cd ..
       - echo "Running Python tests..."
@@ -30,6 +30,4 @@ phases:
 
 artifacts:
   files:
-    - build/*.zip
-    - terraform/**
-    - buildspec_deploy.yml
+    - '**/*'
