--- a/buildspec_build.yml
+++ b/buildspec_build.yml
@@ -11,9 +11,6 @@ phases:
       python: 3.10
     commands:
       - echo "Installing system dependencies..."
-      - apt-get update || true
-      - apt-get install -y unzip zip wget || true
-      - python3 -m pip install --upgrade pip
       - pip install pytest
       - echo "Installing Terraform..."
       - wget https://releases.hashicorp.com/terraform/1.13.2/terraform_1.13.2_linux_amd64.zip
@@ -48,4 +45,6 @@ phases:
 
 artifacts:
   files:
-    - '**/*'
+    - build/*.zip
+    - terraform/**
+    - buildspec_deploy.yml
