optimizing lambda zips and removing makefile

--- a/buildspec_build.yml
+++ b/buildspec_build.yml
@@ -45,8 +45,7 @@ phases:
 
 artifacts:
   files:
-    - build/*.zip
-    - terraform/**
-    - lambdas/**/*.py
-    - lambdas/layer/python/**
-    - buildspec_deploy.yml
+    - '**/*'
+  discard-paths: no
+  exclude-paths:
+    - .terraform/**  
